Mise à jour de logo dans footer et les backgrounds gradues

--- a/medicalchain/frontend/src/index.css
+++ b/medicalchain/frontend/src/index.css
@@ -16,4 +16,11 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+
+
+  color: #ffc0cb; 
+  color:#5ab0e0;
+  color: #031733; 
+  color: #1a7cb3;
+  
 }
